--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,9 +2,10 @@
 # Copy this file to .env.local and fill in your actual Firebase project values.
 # You can find these in the Firebase Console under Project Settings > General > Your apps.
 
-VITE_FIREBASE_API_KEY=your-api-key
-VITE_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=your-project-id
-VITE_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=your-sender-id
-VITE_FIREBASE_APP_ID=your-app-id
+VITE_FIREBASE_API_KEY=AIzaSyBpEn3fyQDagBsizwd37-npOYuCDTetnBI
+VITE_FIREBASE_AUTH_DOMAIN=ziva-622c5.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=ziva-622c5
+VITE_FIREBASE_STORAGE_BUCKET=ziva-622c5.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=1086185974328
+VITE_FIREBASE_APP_ID=1:1086185974328:web:fddd156b067eb969fdd4cd
+VITE_FIREBASE_MEASUREMENT_ID=G-JZ8QML6H55
